--- a/clean-code-s1e1/index.html
+++ b/clean-code-s1e1/index.html
@@ -13,8 +13,8 @@
         Want more details?;
     </a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-tolist">
+  <div class="center-page">
+    <p id="adding-element">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
