--- a/clean-code-s1e1/index.html
+++ b/clean-code-s1e1/index.html
@@ -5,9 +5,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
-  <div class="content">
-    <img src="./eisenhower-matrix.jpg">
+<body class="content">
+  <div class="top-page">
+    <img class="matrix-planning" src="./eisenhower-matrix.jpg">
     <a  class="more-inf" 
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?;
@@ -15,37 +15,37 @@
   </div>
   <div class="center-page">
     <p id="adding-element">
-      <label for="new-task">Add Item</label>
+      <label class="label-new-task" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+        <input id="new-task" class="task input-cl input-text" type="text">
+        <button class="button-cl">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+    <h3 class="h3">Todo</h3>
+    <ul class="ul-cl" id="incomplete-tasks">
+      <li class="li-cl" >
+        <input class="input-cl li-input-checkbox" type="checkbox">
+        <label class="task li-label">Pay Bills</label>
+        <input type="text" class="task input-cl input-text li-input-text ">
+        <button class="edit button-cl">Edit</button>
+        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg"></button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+      <li class="li-cl edit-mode">
+        <input  class="input-cl li-input-checkbox" type="checkbox">
+        <label class="task li-label ul-li-edit-mode-label">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task input-cl input-text li-input-text ul-li-edit-mode-input-text">
+        <button class="edit button-cl">Save</button>
+        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+    <h3 class="h3">Completed</h3>
+    <ul class="ul-cl" id="completed-tasks">
+      <li class="li-cl">
+        <input class="input-cl li-input-checkbox" type="checkbox" checked>
+        <label class="task li-label ul-completed-tasks-label">See the Doctor</label>
+        <input type="text" class="task input-cl input-text li-input-text">
+        <button class="edit button-cl">Edit</button>
+        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg"></button>
       </li>
     </ul>
   </div>
