--- a/clean-code-s1e1/index.html
+++ b/clean-code-s1e1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="content">
   <div class="top-page">
-    <img class="matrix-planning" src="./eisenhower-matrix.jpg">
+    <img class="matrix-planning" src="./eisenhower-matrix.jpg" alt="Eisenhower task scheduling matrix">
     <a class="more-inf" 
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?;
@@ -28,14 +28,14 @@
         <label class="task li-label">Pay Bills</label>
         <input type="text" class="task input-cl input-text li-input-text ">
         <button class="edit button-cl">Edit</button>
-        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg"></button>
+        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg" alt="button to delete task"></button>
       </li>
       <li class="li-cl edit-mode">
         <input  class="input-cl li-input-checkbox" type="checkbox">
         <label class="task li-label ul-li-edit-mode-label">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task input-cl input-text li-input-text ul-li-edit-mode-input-text">
         <button class="edit button-cl">Save</button>
-        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg"></button>
+        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg" alt="button to delete task"></button>
       </li>
     </ul>
     <h3 class="h3">Completed</h3>
@@ -45,7 +45,7 @@
         <label class="task li-label ul-completed-tasks-label">See the Doctor</label>
         <input type="text" class="task input-cl input-text li-input-text">
         <button class="edit button-cl">Edit</button>
-        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg"></button>
+        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg" alt="button to delete task"></button>
       </li>
     </ul>
   </div>
