--- a/clean-code-s1e1/index.html
+++ b/clean-code-s1e1/index.html
@@ -5,50 +5,58 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
+
 <body class="content">
-  <div class="top-page">
+  <header class="header">
     <img class="matrix-planning" src="./eisenhower-matrix.jpg" alt="Eisenhower task scheduling matrix">
     <a class="more-inf" 
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?;
     </a>
-  </div>
-  <div class="center-page">
-    <p id="adding-element">
+  </header>
+
+  <main class="center-page">
+    <section class="add-item">
       <label class="label-new-task" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task input-cl input-text" type="text">
         <button class="button-cl">Add</button>
       </div>
-    </p>
-    <h3 class="h3">Todo</h3>
-    <ul class="ul-cl" id="incomplete-tasks">
-      <li class="li-cl" >
-        <input class="input-cl li-input-checkbox" type="checkbox">
-        <label class="task li-label">Pay Bills</label>
-        <input type="text" class="task input-cl input-text li-input-text ">
-        <button class="edit button-cl">Edit</button>
-        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg" alt="button to delete task"></button>
-      </li>
-      <li class="li-cl edit-mode">
-        <input  class="input-cl li-input-checkbox" type="checkbox">
-        <label class="task li-label ul-li-edit-mode-label">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task input-cl input-text li-input-text ul-li-edit-mode-input-text">
-        <button class="edit button-cl">Save</button>
-        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg" alt="button to delete task"></button>
-      </li>
-    </ul>
-    <h3 class="h3">Completed</h3>
-    <ul class="ul-cl" id="completed-tasks">
-      <li class="li-cl">
-        <input class="input-cl li-input-checkbox" type="checkbox" checked>
-        <label class="task li-label ul-completed-tasks-label">See the Doctor</label>
-        <input type="text" class="task input-cl input-text li-input-text">
-        <button class="edit button-cl">Edit</button>
-        <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg" alt="button to delete task"></button>
-      </li>
-    </ul>
-  </div>
+    </section>
+
+    <section class="todo">
+      <h3 class="h3">Todo</h3>
+      <ul class="ul-cl" id="incomplete-tasks">
+        <li class="li-cl" >
+          <input class="input-cl li-input-checkbox" type="checkbox">
+          <label class="task li-label">Pay Bills</label>
+          <input type="text" class="task input-cl input-text li-input-text ">
+          <button class="edit button-cl">Edit</button>
+          <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg" alt="button to delete task"></button>
+        </li>
+        <li class="li-cl edit-mode">
+          <input  class="input-cl li-input-checkbox" type="checkbox">
+          <label class="task li-label ul-li-edit-mode-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task input-cl input-text li-input-text ul-li-edit-mode-input-text">
+          <button class="edit button-cl">Save</button>
+          <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg" alt="button to delete task"></button>
+        </li>
+      </ul>
+    </section>
+
+    <section class="completed">
+      <h3 class="h3">Completed</h3>
+      <ul class="ul-cl" id="completed-tasks">
+        <li class="li-cl">
+          <input class="input-cl li-input-checkbox" type="checkbox" checked>
+          <label class="task li-label ul-completed-tasks-label">See the Doctor</label>
+          <input type="text" class="task input-cl input-text li-input-text">
+          <button class="edit button-cl">Edit</button>
+          <button class="delete button-cl"><img class="button-delete-img" src="./remove.svg" alt="button to delete task"></button>
+        </li>
+       </ul>
+    </section>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
